--- a/css/index.css
+++ b/css/index.css
@@ -226,7 +226,7 @@ nav a {
 .mobile-menu div {
   width: 32px;
   height: 2px;
-  background: #fff;
+  background: rgba(72, 34, 2, 1);
   margin: 8px;
   transition: 0.3s;
   margin-left: 5em;
@@ -244,12 +244,13 @@ nav a {
     right: 0;
     width: 50vw;
     height: 92vh;
-    background: rgba(62, 72, 65, 0.9);
+    background: rgba(255, 255, 255, 1);
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
+    z-index: 2;
   }
 
   .nav-list li {
