--- a/css/index.css
+++ b/css/index.css
@@ -294,7 +294,7 @@ nav a {
 
 
 .slideshow:nth-of-type(1) {
-  background-image: url("../imagens/branco.jpg");
+  background-image: url("../imagens/cactus-growing-field-against-sky-sunset.jpg");
 }
 
 .slideshow {
