--- a/css/login.css
+++ b/css/login.css
@@ -1,19 +1,30 @@
+@font-face {
+    font-family: 'poppins';
+    src: url('./font/Poppins-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
-    background-color: rgba(245, 240, 229, 1);
+    background-image: url("../imagens/cowboy-background-concept.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: poppins;
 }
 
 .conteudo-login {
     text-align: center;
 }
 
+
+
 .conteudo-formulario {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
