--- a/css/index.css
+++ b/css/index.css
@@ -5,27 +5,25 @@
 }
 
 @font-face {
-  font-family: 'poppins';
-  src: url('../font/Poppins-Regular.ttf') format('truetype');
+  font-family: "poppins";
+  src: url("../font/Poppins-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'poppins-bold';
-  src: url('../font/Poppins-Bold.ttf') format('truetype');
+  font-family: "poppins-bold";
+  src: url("../font/Poppins-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'toca';
-  src: url('../font/Eastwood.ttf') format('truetype');
+  font-family: "toca";
+  src: url("../font/Eastwood.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-
-
 
 #loader-wrapper {
   width: 100%;
@@ -45,7 +43,7 @@
   width: 30px;
   height: 30px;
   position: relative;
-  border: 4px solid #Fff;
+  border: 4px solid #fff;
   animation: loader 2s infinite ease;
 }
 
@@ -105,7 +103,6 @@
   position: fixed;
   width: 100%;
   height: auto;
-
 }
 
 .logo-img {
@@ -156,10 +153,9 @@ nav {
   opacity: 0.9;
   position: fixed;
   z-index: 1000;
-
 }
 
-nav .logo{
+nav .logo {
   margin-left: 2rem;
 }
 
@@ -170,13 +166,11 @@ nav .logo{
   }
 }
 
-
 @media (max-width: 999px) {
   nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
   }
 
   nav .logo {
@@ -235,8 +229,6 @@ nav a {
 }
 
 @media (max-width: 999px) {
-
-
   .nav-list {
     margin: 0;
     position: absolute;
@@ -291,16 +283,10 @@ nav a {
   transform: rotate(45deg) translate(-5px, -7px);
 }
 
-
-
-.slideshow:nth-of-type(1) {
-  background-image: url("../imagens/cactus-growing-field-against-sky-sunset.jpg");
-}
-
 .slideshow {
   position: relative;
   overflow: hidden;
-  height: 50vh;
+  height: 60vh;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -309,7 +295,7 @@ nav a {
   justify-content: center;
   align-items: center;
   z-index: -1;
-  color:white;
+  color: white;
 }
 
 .direita {
@@ -324,7 +310,6 @@ nav a {
   .direita {
     margin: 0 auto;
     padding: 1.5em;
-
   }
 }
 
@@ -332,7 +317,6 @@ nav a {
   font-size: 8rem;
   font-weight: bold;
   font-family: toca;
-
 }
 
 .direita h2 {
@@ -360,19 +344,10 @@ nav a {
   font-family: poppins;
   text-align: center;
   max-width: 1200px;
-
 }
-
-
 
 @media (min-width: 999px) {
-  .slideshow {
-    height: 95vh;
-    width: 100%;
-
-  }
 }
-
 
 .title {
   display: flex;
@@ -383,7 +358,6 @@ nav a {
   margin-top: 0;
 }
 
-
 .title h2 {
   font-weight: bold;
 }
@@ -393,9 +367,9 @@ nav a {
     font-size: 2rem;
   }
 
-  .sobre{
+  .sobre {
     flex-direction: none;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
   }
 }
@@ -403,7 +377,6 @@ nav a {
 .title h1 {
   font-size: 2.5rem;
   font-family: poppins-bold;
-
 }
 
 @media (min-width: 999px) {
@@ -418,7 +391,6 @@ nav a {
   font-family: poppins;
   text-align: justify;
   max-width: 1200px;
-
 }
 
 @media (min-width: 999px) {
@@ -426,9 +398,6 @@ nav a {
     font-size: 1rem;
   }
 }
-
-
-
 
 .drinks {
   display: flex;
@@ -451,7 +420,6 @@ nav a {
   }
 }
 
-
 @media (min-width: 999px) {
   .drinks p {
     font-size: 1.5rem;
@@ -465,7 +433,10 @@ nav a {
   padding: 20px;
   border-radius: 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Grid responsivo */
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(300px, 1fr)
+  ); /* Grid responsivo */
   grid-gap: 20px; /* Espaçamento entre os elementos */
 }
 
@@ -525,7 +496,3 @@ nav a {
 .square p {
   font-size: 1rem; /* Reduzindo o tamanho do texto */
 }
-
-
-
-
