🐛✨ fix(address): corrigir tabela de endereços e implementar relatório de vendas

--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,7 @@ footer {
     margin-top: 6rem;
     font-family: poppins;
     font-weight: normal;
+    width: 100%;
   }
   footer img{
     width: auto;
